--- a/config.conf
+++ b/config.conf
@@ -1,22 +1,22 @@
 [info]
 #开始在一起的日期，格式参考 2022-06-24
-start_date=2022-06-24
+start_date=2020-10-07
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=普洱
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=普洱
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=01-18
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=09-28
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb
-app_secret=c4149ff570
+app_id=wxc18dff782e800fe5
+app_secret=10003478bd51255f4e165d1c49381470
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphC
+template_id=M_QKH9oglVZLCkrimow9bh89jsdwgihelZxCmKjkvZY
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
 user_id=oB3
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
-#user_id=****,***,*****
+#user_id=o1nkj5xrsL7E-yNEE3Pg2Y-mxOjI,o1nkj5xrsL7E-yNEE3Pg2Y-mxOjI
 
 
