--- a/config.conf
+++ b/config.conf
@@ -15,7 +15,7 @@ app_secret=10003478bd51255f4e165d1c49381470
 #消息模板ID，在微信测试号中添加模板会自动生成ID
 template_id=M_QKH9oglVZLCkrimow9bh89jsdwgihelZxCmKjkvZY
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3
+user_id=o1nkj5xrsL7E-yNEE3Pg2Y-mxOjI
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=o1nkj5xrsL7E-yNEE3Pg2Y-mxOjI,o1nkj5xrsL7E-yNEE3Pg2Y-mxOjI
 
